# projeto-ic

./: .gitmodules  CMakeLists.txt  README.md  build.py
.devcontainer/: devcontainer.json  setup.sh
includes/: main.h
src/: main.c
